DAO passing unit tests